2003-11-20  Matti Aarnio  <mea@zmailer.org>

	* proto/scheduler.conf.in, scheduler/msgerror.c,
	  scheduler/readconfig.c,  scheduler/prototypes.h,
	  transports/errormail/errormail.c, man/scheduler.8.in,
	  man/errormail.8.in:
	    Added "PARAMstore-error-on-error = 1" parameter
	    into the scheduler.  And added "discard error-on-error"
	    cases into errormail.

	* configure.in, router/daemonsub.c:
	    Buggy (in Solaris et.al.) autoconf of  dirfd()  thing
	    in they fchdir() callbacks.   Probably should redo
	    the thing somehow differently...

	* scheduler/msgerror.c, transports/errormail/errormail.c:
	    Add "Return-Path:" data label into produced
	    error messages.

2003-11-18  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Mark the version as  2.99.56  (finally!)

2003-11-16  Matti Aarnio  <mea@zmailer.org>

	* proto/cf/aliases.cf:
	    More patches from Eugene Crosser (actually something
	    I omitted by accident when applying things manually;
	    as in "retyping" ..)

	* smtpserver/policytest.c:
	    Moved target specific rejects early -- so that we can
	    reject some targets even for cases where e.g. message
	    source IP address carries "relay all thru us".

	* transports/smtp/smtp.c:
	    More of wrong return code hunting.
	    It turns out, that reopening has been done without
	    resetting MX index, and that omission caused in some
	    case at some targets the reopen to fail with fatal
	    error code.

2003-11-07  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c, transports/smtp/smtp.h:
	    Tracked connection restart problems, specifically against
	    HOTMAIL, which runs things in highly questionable manner,
	    but that may happen with other systems, too.
	    (Apparently HM hangs up the inbound smtp connection
	    right after receiving end of previous message.)

	* compat/sendmail/sendmail.c, smtpserver/smtpserver.h,
	  smtpserver/smtpserver.c, smtpserver/smtpcmds.c: